updates to plot region

--- a/notebooks/gcam_demeter.ipynb
+++ b/notebooks/gcam_demeter.ipynb
@@ -128,11 +128,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "## GCAM change in forest land from 2020\n"
+   ]
   },
   {
    "cell_type": "code",
