ability to convert df to gdf

--- a/notebooks/gcam_demeter_clinic.ipynb
+++ b/notebooks/gcam_demeter_clinic.ipynb
@@ -81,8 +81,11 @@
     "# a Pandas data frame of GCAM's projected land allocation data\n",
     "gcam_df = pd.read_pickle('/Users/d3y010/Desktop/demeter_data/gcam_df.pkl')\n",
     "\n",
+    "# read in data as a pandas data frame\n",
+    "demeter_df = pd.read_csv('/Users/d3y010/Desktop/demeter_data/demeter_2015.csv')\n",
+    "\n",
     "# a geopandas data frame of demeter's output land allocation data with geometry\n",
-    "demeter_gdf = im3vis.build_geodataframe('/Users/d3y010/Desktop/demeter_data/demeter_2015.csv')\n"
+    "demeter_gdf = im3vis.build_geodataframe(demeter_df)\n"
    ]
   },
   {
